unpackaged/main/default/objects/SBQQ__Subscription__c/fields/CA_Quantity__c.field-meta.xml
<CustomField>
    <fullName>CA_Quantity__c</fullName>
    <formula>If((SBQQ__SegmentQuantity__c &gt; 0 &amp;&amp; SBQQ__RevisedSubscription__c = null), SBQQ__SegmentQuantity__c, SBQQ__Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CA Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>