unpackaged/main/default/objects/SBQQ__Subscription__c/fields/Change_in_ARR__c.field-meta.xml
<CustomField>
    <fullName>Change_in_ARR__c</fullName>
    <label>Change in ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>