unpackaged/main/default/objects/SBQQ__Subscription__c/fields/Contracted_Discount_Tier__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Discount_Tier__c</fullName>
    <label>Contracted Discount Tier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>