unpackaged/main/default/objects/SBQQ__Subscription__c/fields/LookUpId__c.field-meta.xml
<CustomField>
    <fullName>LookUpId__c</fullName>
    <label>LookUpId</label>
    <length>240</length>
    <type>Text</type>
</CustomField>