unpackaged/main/default/objects/SBQQ__Subscription__c/fields/QS_Annual_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>QS_Annual_Recurring_Revenue__c</fullName>
    <description>Twinned from the Quote Line. The 12-month value of this Product under this Account. Note: this amount is annualized. If this product is worth $100k and the deal term 6 months, this will show $200k.</description>
    <inlineHelpText>Twinned from the Quote Line. The 12-month value of this Product under this Account. Note: this amount is annualized. If this product is worth $100k and the deal term 6 months, this will show $200k.</inlineHelpText>
    <label>Annual Recurring Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>