unpackaged/main/default/objects/SBQQ__Subscription__c/fields/QS_ARR_Growth__c.field-meta.xml
<CustomField>
    <fullName>QS_ARR_Growth__c</fullName>
    <label>ARR Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>