unpackaged/main/default/objects/SBQQ__Subscription__c/fields/QS_CA_Effective_Terminated_Date__c.field-meta.xml
<CustomField>
    <fullName>QS_CA_Effective_Terminated_Date__c</fullName>
    <formula>SBQQ__TerminatedDate__c + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QS CA Effective Terminated Date</label>
    <type>Date</type>
</CustomField>