unpackaged/main/default/objects/SBQQ__Subscription__c/fields/QS_CA_Quantity__c.field-meta.xml
<CustomField>
    <fullName>QS_CA_Quantity__c</fullName>
    <description>Quantity is populated differently when MDQ is used. If the Segment Quantity is populated, this field displays the Segment Quantity. If it is blank, this field displays the Quantity. Used for Customer Asset data.</description>
    <formula>If((SBQQ__SegmentQuantity__c &gt; 0 &amp;&amp; SBQQ__RevisedSubscription__c = null), SBQQ__SegmentQuantity__c, SBQQ__Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the Segment Quantity is populated, this field displays the Segment Quantity. If it is blank, this field displays the Quantity. Used for Customer Asset data.</inlineHelpText>
    <label>CA Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>