unpackaged/main/default/objects/SBQQ__Subscription__c/fields/QS_CA_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>QS_CA_Start_Date__c</fullName>
    <description>Different Start Date fields get populated on the Quote Line when MDQ is used. If the Segment Start Date is populated, this field displays the Segment Start Date. If it is blank, this field displays the Start Date. Used for Customer Asset data.</description>
    <formula>IF(ISBLANK(SBQQ__SegmentStartDate__c), 
SBQQ__StartDate__c, 
SBQQ__SegmentStartDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the Segment Start Date is populated, this field displays the Segment Start Date. If it is blank, this field displays the Start Date. Used for Customer Asset data.</inlineHelpText>
    <label>CA Start Date</label>
    <type>Date</type>
</CustomField>