unpackaged/main/default/objects/SBQQ__Subscription__c/fields/QS_Change_in_ARR__c.field-meta.xml
<CustomField>
    <fullName>QS_Change_in_ARR__c</fullName>
    <description>From the Quote Line. The change in Annual Recurring Revenue for the transaction that generated this Subscription. Negative values indicate a reduction/cancellation.</description>
    <formula>SBQQ__QuoteLine__r.QS_ARR_Growth__c</formula>
    <inlineHelpText>From the Quote Line. The change in Annual Recurring Revenue for the transaction that generated this Subscription. Negative values indicate a reduction/cancellation.</inlineHelpText>
    <label>Change in ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>