unpackaged/main/default/objects/SBQQ__Subscription__c/fields/QS_Change_in_Quantity__c.field-meta.xml
<CustomField>
    <fullName>QS_Change_in_Quantity__c</fullName>
    <description>From the Quote Line. The change in Quantity for the transaction that generated this Subscription. Negative values indicate a reduction/cancellation.</description>
    <formula>SBQQ__QuoteLine__r.QS_Quantity_Change__c</formula>
    <inlineHelpText>From the Quote Line. The change in Quantity for the transaction that generated this Subscription. Negative values indicate a reduction/cancellation.</inlineHelpText>
    <label>Change in Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>