unpackaged/main/default/objects/SBQQ__Subscription__c/fields/QS_Currently_In_Date_Range__c.field-meta.xml
<CustomField>
    <fullName>QS_Currently_In_Date_Range__c</fullName>
    <description>Determines whether today is within the Subscription’s Start and End Dates. Can be used for Subscription-level reports as desired. Flows into the corresponding CAT record via APEX code to enable reporting on Active subscriptions.</description>
    <formula>OR(
SBQQ__StartDate__c &lt;= today() &amp;&amp; SBQQ__EndDate__c &gt;= today(),
ISNULL(SBQQ__EndDate__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Determines whether today is within the Subscription’s Start and End Dates. Can be used for Subscription-level reports as desired. Flows into the corresponding CAT record via APEX code to enable reporting on Active subscriptions.</inlineHelpText>
    <label>Currently In Date Range</label>
    <type>Checkbox</type>
</CustomField>