unpackaged/main/default/objects/SBQQ__Subscription__c/fields/QS_Customer_Asset_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>QS_Customer_Asset_Account_Id__c</fullName>
    <description>The Account Id will be the one under which the Customer Asset will be created under. This field provides the flexibility to define the account under which the Customer Asset will be created.</description>
    <formula>CASESAFEID(  SBQQ__Account__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Account Id will be the one under which the Customer Asset will be created under. This field provides the flexibility to define the account under which the Customer Asset will be created.</inlineHelpText>
    <label>Customer Asset Account Id</label>
    <type>Text</type>
</CustomField>