unpackaged/main/default/objects/SBQQ__Subscription__c/fields/QS_Customer_Asset_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>QS_Customer_Asset_Unique_Id__c</fullName>
    <description>&quot;QS_Customer_Asset_Account_Id__c &amp; SBQQ__Product__r.Id
Can be appended with additional value such as Partner Account so as to associate a CAT record to an additional Account.&quot;</description>
    <formula>QS_Customer_Asset_Account_Id__c &amp; SBQQ__Product__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>&quot;QS_Customer_Asset_Account_Id__c&amp; SBQQ__Product__r.Id
Can be appended with additional value such as Partner Account so as to associate a CAT record to an additional Account.&quot;</inlineHelpText>
    <label>Customer Asset Unique Id</label>
    <type>Text</type>
</CustomField>