unpackaged/main/default/objects/SBQQ__Subscription__c/fields/QS_Parent_Customer_Asset_Id__c.field-meta.xml
<CustomField>
    <fullName>QS_Parent_Customer_Asset_Id__c</fullName>
    <description>Shows the Id of a product required by another. Used for Percent of Total products. 
IF(SBQQ__RequiredByProduct__c &lt;&gt; &#39;&#39; ,Customer Asset Account Id + SBQQ__RequiredByProduct__c, &#39;&#39;)</description>
    <formula>IF(SBQQ__RequiredByProduct__c &lt;&gt; &#39;&#39; ,  QS_Customer_Asset_Account_Id__c + SBQQ__RequiredByProduct__c, &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the Id of a product required by another. Used for Percent of Total products. 
IF(SBQQ__RequiredByProduct__c &lt;&gt; &#39;&#39; ,Customer Asset Account Id  + SBQQ__RequiredByProduct__c, &#39;&#39;)</inlineHelpText>
    <label>Parent Customer Asset Id</label>
    <type>Text</type>
</CustomField>