unpackaged/main/default/objects/SBQQ__Subscription__c/fields/Unique_Account_Product__c.field-meta.xml
<CustomField>
    <fullName>Unique_Account_Product__c</fullName>
    <externalId>true</externalId>
    <label>Unique Account Product</label>
    <length>240</length>
    <type>Text</type>
</CustomField>