unpackaged/main/default/objects/SBQQ__Subscription__c/fields/UoM__c.field-meta.xml
<CustomField>
    <fullName>UoM__c</fullName>
    <label>UoM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Site</fullName>
            </value>
            <value>
                <fullName>MWp</fullName>
            </value>
            <value>
                <fullName>Finite Count</fullName>
            </value>
            <value>
                <fullName>Fixed Fee</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Cost+</fullName>
            </value>
            <value>
                <fullName>MWh (EnCap)</fullName>
            </value>
            <value>
                <fullName>Number of Devices</fullName>
            </value>
            <value>
                <fullName>WTG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>